# Agent-Aware-Distributed-Conversation-Memory-Personalization-Platform

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
helm/conv-memory/: Chart.yaml  values.yaml
helm/conv-memory/templates/: _helpers.tpl  configmap.yaml  deployments.yaml  ingress.yaml  secret.yaml  services.yaml
observability/: prometheus.yml
observability/grafana/dashboards/: convmem.json
scripts/: initdb.sql  quickstart.sh
services/embedding/: Dockerfile  requirements-st.txt
services/embedding/app/: backends.py  config.py  main.py
services/embedding/tests/: test_api.py  test_backends.py
services/gateway/: Dockerfile  requirements.txt
services/gateway/app/: auth.py  circuit_breaker.py  config.py  main.py  rate_limit.py
services/gateway/tests/: test_circuit_breaker.py  test_proxy.py  test_rate_limit.py
services/memory/: Dockerfile  requirements.txt
services/memory/app/: config.py  embedder.py  main.py  migrations.py  postgres.py  ranking.py  repository.py
services/memory/tests/: conftest.py  test_api.py  (+1 more)
services/personalization/: Dockerfile  requirements.txt
services/session/: Dockerfile  requirements.txt
shared/: pyproject.toml
shared/convmem_shared/: __init__.py  events.py  health.py  http_client.py  observability.py  schemas.py  settings.py
shared/tests/: test_events.py  test_health.py  test_http_client.py  test_observability.py  test_schemas.py
tests/: conftest.py
tests/e2e/: test_smoke.py
tests/integration/: test_cross_service.py
(+21 files in other folders)
