[project]
name = "conv-memory-platform"
version = "0.1.0"
description = "Agent-aware distributed conversation memory & personalization platform"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "shared/tests",
]
addopts = "-q"
