[project]
name = "convmem-shared"
version = "0.1.0"
description = "Shared settings, schemas, and clients for the conversation memory platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "prometheus-client>=0.20",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["convmem_shared*"]
